--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -127,36 +127,36 @@ inactive_tab_background #999
 # bright version.
 
 # black
-color0   #2f2f2f
+color0   #262626
 color8   #656565
 
 # red
-color1   #d75f5f
+color1   #e01010
 color9   #d75f5f
 
 # green
-color2    #d4d232
-color10   #8fee96
+color2    #0fff8b
+color10   #75ffbc
 
 # yellow
-color3    #af865a
-color11   #cd950c
-
+color3    #ffff00
+color11   #ffff69
+#69 fanni
 # blue
-color4   #22c3a1
-color12  #22c3a1
+color4   #0099ff
+color12  #00bbff
 
 # magenta
-color5   #775759
-color13  #775759
+color5   #ff00ff
+color13  #ff69ff
 
 # cyan
-color6   #84edb9
-color14  #84edb9
+color6   #00ffff
+color14  #69ffff
 
 # white
-color7   #c0b18b
-color15  #d8d8d8
+color7   #f0f0f0
+color15  #ffffff
 
 # Key mapping
 # For a list of key names, see: http://www.glfw.org/docs/latest/group__keys.html
