--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -21,7 +21,7 @@ foreground       #3ae880
 background       #262626
 
 # The foreground for selections
-selection_foreground #333333
+selection_foreground #ffffff
 
 # The background for selections
 selection_background #00dede
