Selection back ground is now white

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -21,10 +21,10 @@ foreground       #3ae880
 background       #262626
 
 # The foreground for selections
-selection_foreground #ffffff
+selection_foreground #333333
 
 # The background for selections
-selection_background #00dede
+selection_background #ffffff
 
 # The cursor color
 cursor           #00aaff
